# orcaslicer-cli

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  test_api.sh
.github/workflows/: ci.yml  release.yml
app/: binary_client.py  cache.py  config.py  inspect.py  main.py  models.py  normalize.py  profiles.py  slice_request.py  slicer.py  stl_to_3mf.py  threemf.py
app/web/: app.js  index.html  style.css
cpp/: CMakeLists.txt  LICENSE.txt
cpp/src/: json_io.cpp  json_io.h  nanosvg_impl.cpp  orca_headless.cpp  progress.cpp  progress.h  slice_mode.cpp  slice_mode.h  use_set_mode.cpp  use_set_mode.h
cpp/tests/: smoke.sh
docs/: api-changes-plate-type.md  api-changes-settings-transfer-and-auto-arrange.md  deferred-work.md  normalization-research.md  orcaslicer-cli-profile-loading.md  slice-parity-todo.md
docs/superpowers/plans/: 2026-04-30-defer-user-profile-flattening.md  2026-04-30-export-flattened-user-filament.md  2026-05-02-phase-1-orca-headless.md  2026-05-03-phase-1-completion-and-multi-filament.md  2026-05-03-phase-2-legacy-cleanup.md  2026-05-03-phase-3-3mf-inspect.md  2026-05-03-phase-3b-gateway-migration.md  2026-05-03-phase-4-polish.md
docs/superpowers/specs/: 2026-04-29-defer-user-profile-flattening-design.md  2026-04-30-export-flattened-user-filament-design.md  2026-05-02-orca-headless-fork-design.md
scripts/: generate_fixtures.py  thin_user_profiles.py
tests/: _profile_test_helpers.py  test_3mf_endpoints.py  test_binary_client.py  test_bounding_box.py  test_cache.py  test_export_endpoints.py  test_export_helpers.py  test_extract_plate_extruder.py  test_filament_shape_normalization.py  test_filament_vendor_resolution.py  test_import_endpoints.py  test_inheritance_chain.py  test_inspect.py  test_machine_full_shims.py  test_normalize.py  test_process_import.py  test_profile_list_vendor.py  test_resolve_chain_for_payload.py  test_sanitize_3mf.py  test_slice_request_parsing.py  test_slice_token_endpoint.py  test_slicer_failure_parsing.py  test_slicer_settings_transfer.py  test_strict_resolution.py  test_threemf_thumbnails.py  test_used_filament_slots.py  validate_resolution_gui.py  validate_resolution_ours.py
tests/fixtures/import_examples/: filament_esun_pla_basic_a1m.json  process_esun_pla_basic_a1m.json
tests/fixtures/profile_resolution/: eSUN PLA-Basic @BBL A1M Filament.json  manually-resolved-04.json
tests/integration/: test_inspect_endpoint.py  test_slice_v2_fidelity.py
